add another pages

--- a/src/404.html
+++ b/src/404.html
@@ -4,22 +4,10 @@ layout: default
 title: Erreur 404
 ---
 
-<section class="mini-slider wow fadeIn" data-wow-duration="1s" data-wow-delay="0">
-    <div class='container'>
-        <div class='row'>
-            <div class='col-sm-12'>
-                <h1>Erreur 404</h1>
-            </div>
-        </div>
-    </div>
-</section>
-<section class='one'>
-    <div class='container text-center'>
-        <p class="lead text-center">
-            Le serveur n'a pas trouvé le document souhaité.
-        </p>
-        <a href="{{ site.baseurl }}/" class='button1'>
-            <span class='txt'>Retour à la page d'accueil</span>
-        </a>
-    </div>
+<section>
+	<h1>404</h1>
+	<p class="lead">
+		Le serveur n'a pas trouvé le document souhaité.
+	</p>
+	<a href="/">Retour à la page d'accueil</a>
 </section>
