--- a/src/accueil.html
+++ b/src/accueil.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /
-title: ""
-description: ""
+title: "Société Climatisation 78 | Installateur - Réparation"
+description: "Experts en confort thermique, nos spécialistes en système de climatisation dans tout le 78 vous propose leurs services professionnels et agrées RGE."
 ---
 
 <section>
