--- a/src/chauffe-eau.html
+++ b/src/chauffe-eau.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /chauffe-eau/
-title: Chauffe-eau
-description: Découvrez tous nos produits
+title: "Chauffe-eau dans le 78, système moderne et confortable | KLIMAT"
+description: "Si vous envisagez de faire installer un chauffe-eau thermodynamique moderne dans le 78, la société Klimat propose ses prestations économiques et écologiques."
 ---
 
 <section class="slide slide3">
