--- a/src/contact.html
+++ b/src/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /contact/
-title: ""
-description: ""
+title: "Contactez-nous pour plus de renseignements | KLIMAT | 06 33 35 23 10"
+description: "Notre équipe se tient à votre disposition pour répondre à vos interrogations ou à vos demandes de conseils. Pour plus d'informations, contactez-nous !"
 ---
 
 <section class="slide contact-bg">
