--- a/src/devis.html
+++ b/src/devis.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /devis/
-title: ""
-description: ""
+title: "Obtenez votre devis en ligne gratuitement | KLIMAT | 06 33 35 23 10"
+description: "Pour obtenir un devis personnalisé en quelques clics, nous vous invitons à remplir notre formulaire. Ce dernier se fait en ligne et est totalement gratuit !"
 ---
 
 <section class="slide devis-bg">
