--- a/src/nos-produits.html
+++ b/src/nos-produits.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /nos-produits/
-title: Nos produits
-description: Découvrez tous nos produits
+title: "Découvrez notre gamme de produits de qualité | 06 33 35 23 10"
+description: "Pompes à chaleur, chauffe-eau thermodynamique, purificateurs d'air... chez Klimat, consultez la liste des produits répondant aux normes RGE sur notre site."
 ---
 
 <section class="slide slide4">
