--- a/src/pompe-a-chaleur.html
+++ b/src/pompe-a-chaleur.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /pompe-a-chaleur/
-title: Pompe à chaleur
-description: Découvrez tous nos produits
+title: "Pompe à Chaleur 78 | Installateur - Entretien - Réparateur"
+description: "Experte en solutions thermiques écologiques, l’équipe professionnelle de Klimat vous propose ses services concernant votre pompe à chaleur dans le 78."
 ---
 
 <section class="slide slide2">
