--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,8 @@
 layout: default
 permalink: /contact/
 title: "Contactez-nous pour plus de renseignements | KLIMAT | 06 33 35 23 10"
-description: "Notre équipe se tient à votre disposition pour répondre à vos interrogations ou à vos demandes de conseils. Pour plus d'informations, contactez-nous !"
+description: "Notre équipe se tient à votre disposition pour répondre à vos interrogations ou à vos demandes de
+conseils. Pour plus d'informations, contactez-nous !"
 ---
 
 <section class="slide contact-bg">
@@ -13,45 +14,54 @@ description: "Notre équipe se tient à votre disposition pour répondre à vos 
 
 <section class="one contact">
 	<div class="container">
-	<div class="row">
-		<div class="col-sm-4">
-			<div class="icon pull-left">
-				<i class="fa fa-phone" aria-hidden="true"></i>
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="icon pull-left">
+					<i class="fa fa-phone" aria-hidden="true"></i>
+				</div>
+				<p class="pad10"><strong>Téléphone </strong></p>
+				<p><a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a></p>
 			</div>
-			<p class="pad10"><strong>Téléphone </strong></p>
-			<p><a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone1 }}</a></p>
-		</div>
-		<div class="col-sm-4">
-			<div class="icon pull-left">
-				<i class="fa fa-map-marker" aria-hidden="true"></i>
+			<div class="col-sm-4">
+				<div class="icon pull-left">
+					<i class="fa fa-map-marker" aria-hidden="true"></i>
+				</div>
+				<p class="pad10"><strong>Adresse</strong></p>
+				<p>{{ site.data.company.address }} {{ site.data.company.zipCode }} {{ site.data.company.city }}</p>
 			</div>
-			<p class="pad10"><strong>Adresse</strong></p>
-			<p>{{ site.data.company.address }} {{ site.data.company.zipCode }} {{ site.data.company.city }}</p>
-		</div>
-		<div class="col-sm-4">
-			<div class="icon pull-left">
-				<i class="fa fa-envelope" aria-hidden="true"></i>
+			<div class="col-sm-4">
+				<div class="icon pull-left">
+					<i class="fa fa-envelope" aria-hidden="true"></i>
+				</div>
+				<p class="pad10"><strong>Email </strong></p>
+				<p><a href="mailto:{{ site.data.company.email }}">{{ site.data.company.email }}</a></p>
 			</div>
-			<p class="pad10"><strong>Email </strong></p>
-			<p><a href="mailto:{{ site.data.company.email }}">{{ site.data.company.email }}</a></p>
 		</div>
-	</div>
-	<div class="pad20"></div>	
+		<div class="pad20"></div>
 
 		<div class="row">
 			<div class="col-sm-12 form-contact">
 
-		<div class="div01"></div>
-					<form action="https://formspree.io/f/xwpopegk" method="POST">
+				<div class="div01"></div>
+				<form class="form" method="post" id="contactForm" action="{{ site.data.company.url.notify }}">
+					<input type="hidden" name="redirectUrl" value="{{site.data.company.url.redirect}}" />
+					<input type="hidden" name="type" value="contact" />
+					<input type="hidden" name="website" value="{{ site.data.company.website }}" />
+					<input type="hidden" name="lang" value="{{ site.data.company.lang }}" />
+					<input type="hidden" name="key" value="{{ site.data.company.recaptcha.server }}">
+					<input type="hidden" name="condition" value="on" />
+					<input type="hidden" name="firstName" value="" />
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-group has-feedback">
-								<input type="text" class="form-control " id="nom" name="nom" value="name" placeholder="Nom">
+								<input type="text" class="form-control " id="nom" name="name"
+									placeholder="Nom" required>
 							</div>
 						</div>
 						<div class="col-sm-12">
 							<div class="form-group has-feedback">
-								<input type="text" class="form-control " id="entreprise" name="entreprise" value="company" placeholder="Entreprise ">
+								<input type="text" class="form-control " id="entreprise" name="company"
+									 placeholder="Entreprise ">
 							</div>
 						</div>
 					</div>
@@ -59,20 +69,34 @@ description: "Notre équipe se tient à votre disposition pour répondre à vos 
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="form-group has-feedback">
-								<input type="text" class="form-control " id="email" name="email" value="email" placeholder="Email">
+								<input type="text" class="form-control " id="email" name="email"
+									placeholder="Email" required>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div class="form-group has-feedback">
-								<input type="text" class="form-control " id="telephone" name="telephone" value="phone" placeholder="Telephone">
+								<input type="text" class="form-control " id="telephone" name="telephone"
+									placeholder="Telephone" required>
 							</div>
 						</div>
-						
+
 					</div>
-					
+
 
 					<div class="form-group has-feedback">
-						<textarea rows="6" name="message" class="form-control" id="message" placeholder="Message">message</textarea>
+						<textarea rows="6" name="message" class="form-control" id="message"
+							placeholder="Message" required></textarea>
+					</div>
+
+					<div class="form-group">
+						<div class="g-recaptcha" data-sitekey="{{ site.data.company.recaptcha.client }}">
+						</div>
+						<br />
+						<div id="contact-form-response" class="text-white"
+							style="color: #000 !important; font-size: 1rem;">
+						</div>
+						<input style="display: none" type="submit" value="Submit"
+							class="wpcf7-form-control wpcf7-submit" />
 					</div>
 					<div class="buttondevis ">
 						<button type="submit" class="button">Envoyer</button>
